boltffi_bindgen/src/render/dart/snapshots/boltffi_bindgen__render__dart__templates__tests__snapshot_async_callback.snap
---
source: boltffi_bindgen/src/render/dart/templates.rs
expression: template.render().unwrap()
---

/// A Generic Callback Trait Def
abstract interface class ICallback {
  Future<int> mapU32(int n);

  Future<String> mapStringRef(String s);

  Future<String> mapString(String s);

  /// process bytes callback method
  Future<void> processBytes($$typed_data.Uint8List bytes);
}

final class _I$ICallbackVTable extends $$ffi.Struct {
  external $$ffi.Pointer<
    $$ffi.NativeFunction<
      $$ffi.Void Function($$ffi.Uint64)
    >
  > free;

  external $$ffi.Pointer<
    $$ffi.NativeFunction<
      $$ffi.Uint64 Function($$ffi.Uint64)
    >
  > clone;

  external $$ffi.Pointer<
    $$ffi.NativeFunction<
      $$ffi.Void Function($$ffi.Uint64, $$ffi.Uint32, $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Uint32, $$ffi.Int32)>>, $$ffi.Uint64)
    >
  > mapU32;

  external $$ffi.Pointer<
    $$ffi.NativeFunction<
      $$ffi.Void Function($$ffi.Uint64, $$ffi.Pointer<$$ffi.Uint8>, $$ffi.UintPtr, $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Pointer<$$ffi.Uint8>, $$ffi.UintPtr, $$ffi.Int32)>>, $$ffi.Uint64)
    >
  > mapStringRef;

  external $$ffi.Pointer<
    $$ffi.NativeFunction<
      $$ffi.Void Function($$ffi.Uint64, $$ffi.Pointer<$$ffi.Uint8>, $$ffi.UintPtr, $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Pointer<$$ffi.Uint8>, $$ffi.UintPtr, $$ffi.Int32)>>, $$ffi.Uint64)
    >
  > mapString;

  external $$ffi.Pointer<
    $$ffi.NativeFunction<
      $$ffi.Void Function($$ffi.Uint64, $$ffi.Pointer<$$ffi.Uint8>, $$ffi.UintPtr, $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Int32)>>, $$ffi.Uint64)
    >
  > processBytes;
}

final class _I$ICallbackProxy implements ICallback {
  static final _finalizer = Finalizer<_$$BoltCallbackHandle>((handle) {
    handle.vtable.cast<_I$ICallbackVTable>().ref.free.asFunction<void Function(int)>()(handle.handle);
  });

  final _$$BoltCallbackHandle _handle;
  late final void Function(int, int, $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Uint32, $$ffi.Int32)>>, int) _f$mapU32;
  late final void Function(int, $$ffi.Pointer<$$ffi.Uint8>, int, $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Pointer<$$ffi.Uint8>, $$ffi.UintPtr, $$ffi.Int32)>>, int) _f$mapStringRef;
  late final void Function(int, $$ffi.Pointer<$$ffi.Uint8>, int, $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Pointer<$$ffi.Uint8>, $$ffi.UintPtr, $$ffi.Int32)>>, int) _f$mapString;
  late final void Function(int, $$ffi.Pointer<$$ffi.Uint8>, int, $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Int32)>>, int) _f$processBytes;

  _I$ICallbackProxy(_$$BoltCallbackHandle handle):
    _handle = handle {
    final _l$vtable = handle.vtable.cast<_I$ICallbackVTable>().ref;
    _f$mapU32 = _l$vtable.mapU32.asFunction();
    _f$mapStringRef = _l$vtable.mapStringRef.asFunction();
    _f$mapString = _l$vtable.mapString.asFunction();
    _f$processBytes = _l$vtable.processBytes.asFunction();
    _finalizer.attach(this, this._handle, detach: this);
  }

  @override
  Future<int> mapU32(int n) {
    final _l$completer = $$async.Completer<int>();
    final _l$outPtr = _$$BoltCallocPtr<$$ffi.Uint32>.alloc($$ffi.sizeOf<$$ffi.Uint32>());
    late final $$ffi.NativeCallable<$$ffi.Void Function($$ffi.Uint64, $$ffi.Uint32, $$ffi.Int32)> _l$completerCallbackCallable;
    _l$completerCallbackCallable = $$ffi.NativeCallable.listener((int _p$data, int _p$out, int _p$outStatus) {
      _l$completerCallbackCallable.close();
      if (_p$outStatus != 0) {
        throw $$BoltException("ICallback.mapU32(...) foreign future panicked");
      }
      _l$completer.complete(_p$out);
    });
    _f$mapU32(_handle.handle, n, _l$completerCallbackCallable.nativeFunction, 0);
    return _l$completer.future;
  }
  @override
  Future<String> mapStringRef(String s) {
    final _l$completer = $$async.Completer<String>();
    final l$sStorage = _$$BoltStoragePool.acquireStorage((4 + (s.length * 3)));
    final l$sWire = _$$BoltWireEncoder(_$$BoltBufWriter.fromSpan(l$sStorage.ptr, l$sStorage.len));
    l$sWire.writeString(s);
    late final $$ffi.NativeCallable<$$ffi.Void Function($$ffi.Uint64, $$ffi.Pointer<$$ffi.Uint8>, $$ffi.UintPtr, $$ffi.Int32)> _l$completerCallbackCallable;
    _l$completerCallbackCallable = $$ffi.NativeCallable.listener((int _p$data, $$ffi.Pointer<$$ffi.Uint8> _p$outPtr, int _p$outLen, int _p$outStatus) {
      _l$completerCallbackCallable.close();
      if (_p$outStatus != 0) {
        throw $$BoltException("ICallback.mapStringRef(...) foreign future panicked");
      }
      final _l$resWire = _$$BoltWireDecoder(_$$BoltBufReader.fromSpan(_p$outPtr, _p$outLen));
      _l$completer.complete(_l$resWire.readString());
    });
    _f$mapStringRef(_handle.handle, l$sStorage.ptr, l$sWire.len, _l$completerCallbackCallable.nativeFunction, 0);
    _$$BoltStoragePool.releaseStorage(l$sStorage);
    return _l$completer.future;
  }
  @override
  Future<String> mapString(String s) {
    final _l$completer = $$async.Completer<String>();
    final l$sStorage = _$$BoltStoragePool.acquireStorage((4 + (s.length * 3)));
    final l$sWire = _$$BoltWireEncoder(_$$BoltBufWriter.fromSpan(l$sStorage.ptr, l$sStorage.len));
    l$sWire.writeString(s);
    late final $$ffi.NativeCallable<$$ffi.Void Function($$ffi.Uint64, $$ffi.Pointer<$$ffi.Uint8>, $$ffi.UintPtr, $$ffi.Int32)> _l$completerCallbackCallable;
    _l$completerCallbackCallable = $$ffi.NativeCallable.listener((int _p$data, $$ffi.Pointer<$$ffi.Uint8> _p$outPtr, int _p$outLen, int _p$outStatus) {
      _l$completerCallbackCallable.close();
      if (_p$outStatus != 0) {
        throw $$BoltException("ICallback.mapString(...) foreign future panicked");
      }
      final _l$resWire = _$$BoltWireDecoder(_$$BoltBufReader.fromSpan(_p$outPtr, _p$outLen));
      _l$completer.complete(_l$resWire.readString());
    });
    _f$mapString(_handle.handle, l$sStorage.ptr, l$sWire.len, _l$completerCallbackCallable.nativeFunction, 0);
    _$$BoltStoragePool.releaseStorage(l$sStorage);
    return _l$completer.future;
  }
  @override
  Future<void> processBytes($$typed_data.Uint8List bytes) {
    final _l$completer = $$async.Completer<void>();
    final l$bytesStorage = _$$BoltStoragePool.acquireStorage((4 + bytes.length));
    final l$bytesWire = _$$BoltWireEncoder(_$$BoltBufWriter.fromSpan(l$bytesStorage.ptr, l$bytesStorage.len));
    l$bytesWire.writeBytes(bytes);
    late final $$ffi.NativeCallable<$$ffi.Void Function($$ffi.Uint64, $$ffi.Int32)> _l$completerCallbackCallable;
    _l$completerCallbackCallable = $$ffi.NativeCallable.listener((int _p$data, int _p$outStatus) {
      _l$completerCallbackCallable.close();
      if (_p$outStatus != 0) {
        throw $$BoltException("ICallback.processBytes(...) foreign future panicked");
      }
      _l$completer.complete(null);
    });
    _f$processBytes(_handle.handle, l$bytesStorage.ptr, l$bytesWire.len, _l$completerCallbackCallable.nativeFunction, 0);
    _$$BoltStoragePool.releaseStorage(l$bytesStorage);
    return _l$completer.future;
  }
}

final class _I$ICallback {
  static final _$$BoltFFIHandleMap<ICallback> _k$map = _$$BoltFFIHandleMap();

  static final _$$BoltCallocPtr<_I$ICallbackVTable> _k$vtable = (() {
    final vtable = _$$BoltCallocPtr<_I$ICallbackVTable>.alloc(
      $$ffi.sizeOf<_I$ICallbackVTable>(),
    );

    vtable.ptr.ref
      ..free = $$ffi.Pointer.fromFunction(_I$ICallback.free)
      ..clone = $$ffi.Pointer.fromFunction(_I$ICallback.clone, 0)
      ..mapU32 = $$ffi.Pointer.fromFunction(_I$ICallback.mapU32)
      ..mapStringRef = $$ffi.Pointer.fromFunction(_I$ICallback.mapStringRef)
      ..mapString = $$ffi.Pointer.fromFunction(_I$ICallback.mapString)
      ..processBytes = $$ffi.Pointer.fromFunction(_I$ICallback.processBytes);

    return vtable;
  })();

  static _$$BoltCallbackHandle createCallbackHandle(ICallback value) {
    return $$ffi.Struct.create()
      ..handle = _k$map.insert(value)
      ..vtable = _k$vtable.ptr.cast<$$ffi.Void>();
  }

  static void free(int handle) => _k$map.remove(handle);

  static int clone(int handle) => _k$map.clone(handle);

  static ICallback wrap(_$$BoltCallbackHandle handle) => _k$map.get(handle.handle) ?? _I$ICallbackProxy(handle);

  static void mapU32(int _p$handle, int n, $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Uint32, $$ffi.Int32)>> _p$callback, int _p$asyncCtx) async {
    final _l$impl = _k$map.get(_p$handle);
    if (_l$impl == null) {
      throw $$BoltException("ICallback: invalid handle `${_p$handle}`");
    }
    final l$n = n;
    _p$callback.asFunction<void Function(int, int, int)>()(_p$asyncCtx, await _l$impl.mapU32(l$n), 0);
  }

  static void mapStringRef(int _p$handle, $$ffi.Pointer<$$ffi.Uint8> sPtr, int sLen, $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Pointer<$$ffi.Uint8>, $$ffi.UintPtr, $$ffi.Int32)>> _p$callback, int _p$asyncCtx) async {
    final _l$impl = _k$map.get(_p$handle);
    if (_l$impl == null) {
      throw $$BoltException("ICallback: invalid handle `${_p$handle}`");
    }
    final l$sWire = _$$BoltWireDecoder(_$$BoltBufReader.fromSpan(sPtr, sLen));
    final l$s = l$sWire.readString();
    final _l$res = await _l$impl.mapStringRef(l$s);
    final _l$resStorage = _$$BoltStoragePool.acquireStorage((4 + (_l$res.length * 3)));
    final _l$resWire = _$$BoltWireEncoder(_$$BoltBufWriter.fromSpan(_l$resStorage.ptr, _l$resStorage.len));
    _l$resWire.writeString(_l$res);
    _p$callback.asFunction<void Function(int, $$ffi.Pointer<$$ffi.Uint8>, int, int)>()(_p$asyncCtx, _l$resStorage.ptr, _l$resWire.len, 0);
    _$$BoltStoragePool.releaseStorage(_l$resStorage);
  }

  static void mapString(int _p$handle, $$ffi.Pointer<$$ffi.Uint8> sPtr, int sLen, $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Pointer<$$ffi.Uint8>, $$ffi.UintPtr, $$ffi.Int32)>> _p$callback, int _p$asyncCtx) async {
    final _l$impl = _k$map.get(_p$handle);
    if (_l$impl == null) {
      throw $$BoltException("ICallback: invalid handle `${_p$handle}`");
    }
    final l$sWire = _$$BoltWireDecoder(_$$BoltBufReader.fromSpan(sPtr, sLen));
    final l$s = l$sWire.readString();
    final _l$res = await _l$impl.mapString(l$s);
    final _l$resStorage = _$$BoltStoragePool.acquireStorage((4 + (_l$res.length * 3)));
    final _l$resWire = _$$BoltWireEncoder(_$$BoltBufWriter.fromSpan(_l$resStorage.ptr, _l$resStorage.len));
    _l$resWire.writeString(_l$res);
    _p$callback.asFunction<void Function(int, $$ffi.Pointer<$$ffi.Uint8>, int, int)>()(_p$asyncCtx, _l$resStorage.ptr, _l$resWire.len, 0);
    _$$BoltStoragePool.releaseStorage(_l$resStorage);
  }

  static void processBytes(int _p$handle, $$ffi.Pointer<$$ffi.Uint8> bytesPtr, int bytesLen, $$ffi.Pointer<$$ffi.NativeFunction<$$ffi.Void Function($$ffi.Uint64, $$ffi.Int32)>> _p$callback, int _p$asyncCtx) async {
    final _l$impl = _k$map.get(_p$handle);
    if (_l$impl == null) {
      throw $$BoltException("ICallback: invalid handle `${_p$handle}`");
    }
    final l$bytesWire = _$$BoltWireDecoder(_$$BoltBufReader.fromSpan(bytesPtr, bytesLen));
    final l$bytes = l$bytesWire.readUint8List();
    await _l$impl.processBytes(l$bytes);
    _p$callback.asFunction<void Function(int, int)>()(_p$asyncCtx, 0);
  }
}
