boltffi_bindgen/src/render/dart/snapshots/boltffi_bindgen__render__dart__templates__tests__snapshot_record_with_default_fields.snap
---
source: boltffi_bindgen/src/render/dart/templates.rs
expression: template.render().unwrap()
---

/// A 3D Vector
/// 
/// `z` coordinate defaults to 0
final class Vector {
  /// `x` coordinate
  double x;
  /// `y` coordinate
  double y;
  /// `z` coordinate
  double z;

  Vector({
    this.z = 0,
    required this.x,
    required this.y,
  });

  @pragma('vm:prefer-inline')
  factory Vector._m$wireDecode(_$$BoltWireDecoder _p$reader) {
    return Vector(
      x: _p$reader.readF64(),
      y: _p$reader.readF64(),
      z: _p$reader.readF64(),
    );
  }

  @pragma('vm:prefer-inline')
  void _m$wireEncode(_$$BoltWireEncoder _p$writer) {
    _p$writer.writeF64(x);
    _p$writer.writeF64(y);
    _p$writer.writeF64(z);
  }

  @pragma('vm:prefer-inline')
  int _m$wireEncodedSize() => 8 + 8 + 8;

  @override
  int get hashCode {
    int _l$result = 1;
    _l$result = 31 * _l$result + x.hashCode;
    _l$result = 31 * _l$result + y.hashCode;
    _l$result = 31 * _l$result + z.hashCode;
    return _l$result;
  }

  @override
  bool operator ==(Object other) {
    if (identical(this, other)) return true;

    return other is Vector && x == other.x && y == other.y && z == other.z;
  }
}
