boltffi_bindgen/src/render/dart/snapshots/boltffi_bindgen__render__dart__templates__tests__snapshot_record_with_primitive_list_fields.snap
---
source: boltffi_bindgen/src/render/dart/templates.rs
expression: template.render().unwrap()
---

final class PrimitiveLists {
  $$typed_data.Uint8List u8s;
  $$typed_data.Int8List i8s;
  $$typed_data.Uint16List u16s;
  $$typed_data.Int16List i16s;
  $$typed_data.Uint32List u32s;
  $$typed_data.Int32List i32s;
  $$typed_data.Uint64List u64s;
  $$typed_data.Int64List i64s;
  $$typed_data.Float32List f32s;
  $$typed_data.Float64List f64s;
  $$BoltBoolList bools;

  PrimitiveLists({
    required this.u8s,
    required this.i8s,
    required this.u16s,
    required this.i16s,
    required this.u32s,
    required this.i32s,
    required this.u64s,
    required this.i64s,
    required this.f32s,
    required this.f64s,
    required this.bools,
  });

  @pragma('vm:prefer-inline')
  factory PrimitiveLists._m$wireDecode(_$$BoltWireDecoder _p$reader) {
    return PrimitiveLists(
      u8s: _p$reader.readUint8List(),
      i8s: _p$reader.readInt8List(),
      u16s: _p$reader.readUint16List(),
      i16s: _p$reader.readInt16List(),
      u32s: _p$reader.readUint32List(),
      i32s: _p$reader.readInt32List(),
      u64s: _p$reader.readUint64List(),
      i64s: _p$reader.readInt64List(),
      f32s: _p$reader.readFloat32List(),
      f64s: _p$reader.readFloat64List(),
      bools: _p$reader.readBoolList(),
    );
  }

  @pragma('vm:prefer-inline')
  void _m$wireEncode(_$$BoltWireEncoder _p$writer) {
    _p$writer.writeBytes(u8s);
    _p$writer.writeBytes(i8s);
    _p$writer.writeBytes(u16s);
    _p$writer.writeBytes(i16s);
    _p$writer.writeBytes(u32s);
    _p$writer.writeBytes(i32s);
    _p$writer.writeBytes(u64s);
    _p$writer.writeBytes(i64s);
    _p$writer.writeBytes(f32s);
    _p$writer.writeBytes(f64s);
    _p$writer.writeBytes(bools._bytes);
  }

  @pragma('vm:prefer-inline')
  int _m$wireEncodedSize() => (4 + u8s.length) + (4 + (i8s.length * 1)) + (4 + (u16s.length * 2)) + (4 + (i16s.length * 2)) + (4 + (u32s.length * 4)) + (4 + (i32s.length * 4)) + (4 + (u64s.length * 8)) + (4 + (i64s.length * 8)) + (4 + (f32s.length * 4)) + (4 + (f64s.length * 8)) + (4 + (bools.length * 1));

  @override
  int get hashCode {
    int _l$result = 1;
    _l$result = 31 * _l$result + _$$BoltUtil.listHash(u8s, (_p$item) => _p$item.hashCode);
    _l$result = 31 * _l$result + _$$BoltUtil.listHash(i8s, (_p$item) => _p$item.hashCode);
    _l$result = 31 * _l$result + _$$BoltUtil.listHash(u16s, (_p$item) => _p$item.hashCode);
    _l$result = 31 * _l$result + _$$BoltUtil.listHash(i16s, (_p$item) => _p$item.hashCode);
    _l$result = 31 * _l$result + _$$BoltUtil.listHash(u32s, (_p$item) => _p$item.hashCode);
    _l$result = 31 * _l$result + _$$BoltUtil.listHash(i32s, (_p$item) => _p$item.hashCode);
    _l$result = 31 * _l$result + _$$BoltUtil.listHash(u64s, (_p$item) => _p$item.hashCode);
    _l$result = 31 * _l$result + _$$BoltUtil.listHash(i64s, (_p$item) => _p$item.hashCode);
    _l$result = 31 * _l$result + _$$BoltUtil.listHash(f32s, (_p$item) => _p$item.hashCode);
    _l$result = 31 * _l$result + _$$BoltUtil.listHash(f64s, (_p$item) => _p$item.hashCode);
    _l$result = 31 * _l$result + _$$BoltUtil.listHash(bools, (_p$item) => _p$item.hashCode);
    return _l$result;
  }

  @override
  bool operator ==(Object other) {
    if (identical(this, other)) return true;

    return other is PrimitiveLists && _$$BoltUtil.listCompare(u8s, other.u8s, (_l$a, _l$b) => _l$a == _l$b) && _$$BoltUtil.listCompare(i8s, other.i8s, (_l$a, _l$b) => _l$a == _l$b) && _$$BoltUtil.listCompare(u16s, other.u16s, (_l$a, _l$b) => _l$a == _l$b) && _$$BoltUtil.listCompare(i16s, other.i16s, (_l$a, _l$b) => _l$a == _l$b) && _$$BoltUtil.listCompare(u32s, other.u32s, (_l$a, _l$b) => _l$a == _l$b) && _$$BoltUtil.listCompare(i32s, other.i32s, (_l$a, _l$b) => _l$a == _l$b) && _$$BoltUtil.listCompare(u64s, other.u64s, (_l$a, _l$b) => _l$a == _l$b) && _$$BoltUtil.listCompare(i64s, other.i64s, (_l$a, _l$b) => _l$a == _l$b) && _$$BoltUtil.listCompare(f32s, other.f32s, (_l$a, _l$b) => _l$a == _l$b) && _$$BoltUtil.listCompare(f64s, other.f64s, (_l$a, _l$b) => _l$a == _l$b) && _$$BoltUtil.listCompare(bools, other.bools, (_l$a, _l$b) => _l$a == _l$b);
  }
}
