boltffi_bindgen/src/render/dart/snapshots/boltffi_bindgen__render__dart__templates__tests__snapshot_sync_callback.snap
---
source: boltffi_bindgen/src/render/dart/templates.rs
expression: template.render().unwrap()
---

/// A Generic Callback Trait Def
abstract interface class ICallback {
  int mapU32(int n);

  String mapStringRef(String s);

  String mapString(String s);

  /// process bytes callback method
  void processBytes($$typed_data.Uint8List bytes);
}

final class _I$ICallbackVTable extends $$ffi.Struct {
  external $$ffi.Pointer<
    $$ffi.NativeFunction<
      $$ffi.Void Function($$ffi.Uint64)
    >
  > free;

  external $$ffi.Pointer<
    $$ffi.NativeFunction<
      $$ffi.Uint64 Function($$ffi.Uint64)
    >
  > clone;

  external $$ffi.Pointer<
    $$ffi.NativeFunction<
      $$ffi.Void Function($$ffi.Uint64, $$ffi.Uint32, $$ffi.Pointer<$$ffi.Uint32>, $$ffi.Pointer<_$$BoltFFIStatus>)
    >
  > mapU32;

  external $$ffi.Pointer<
    $$ffi.NativeFunction<
      $$ffi.Void Function($$ffi.Uint64, $$ffi.Pointer<$$ffi.Uint8>, $$ffi.UintPtr, $$ffi.Pointer<$$ffi.Pointer<$$ffi.Uint8>>, $$ffi.Pointer<$$ffi.UintPtr>, $$ffi.Pointer<_$$BoltFFIStatus>)
    >
  > mapStringRef;

  external $$ffi.Pointer<
    $$ffi.NativeFunction<
      $$ffi.Void Function($$ffi.Uint64, $$ffi.Pointer<$$ffi.Uint8>, $$ffi.UintPtr, $$ffi.Pointer<$$ffi.Pointer<$$ffi.Uint8>>, $$ffi.Pointer<$$ffi.UintPtr>, $$ffi.Pointer<_$$BoltFFIStatus>)
    >
  > mapString;

  external $$ffi.Pointer<
    $$ffi.NativeFunction<
      $$ffi.Void Function($$ffi.Uint64, $$ffi.Pointer<$$ffi.Uint8>, $$ffi.UintPtr, $$ffi.Pointer<_$$BoltFFIStatus>)
    >
  > processBytes;
}

final class _I$ICallbackProxy implements ICallback {
  static final _finalizer = Finalizer<_$$BoltCallbackHandle>((handle) {
    handle.vtable.cast<_I$ICallbackVTable>().ref.free.asFunction<void Function(int)>()(handle.handle);
  });

  final _$$BoltCallbackHandle _handle;
  late final void Function(int, int, $$ffi.Pointer<$$ffi.Uint32>, $$ffi.Pointer<_$$BoltFFIStatus>) _f$mapU32;
  late final void Function(int, $$ffi.Pointer<$$ffi.Uint8>, int, $$ffi.Pointer<$$ffi.Pointer<$$ffi.Uint8>>, $$ffi.Pointer<$$ffi.UintPtr>, $$ffi.Pointer<_$$BoltFFIStatus>) _f$mapStringRef;
  late final void Function(int, $$ffi.Pointer<$$ffi.Uint8>, int, $$ffi.Pointer<$$ffi.Pointer<$$ffi.Uint8>>, $$ffi.Pointer<$$ffi.UintPtr>, $$ffi.Pointer<_$$BoltFFIStatus>) _f$mapString;
  late final void Function(int, $$ffi.Pointer<$$ffi.Uint8>, int, $$ffi.Pointer<_$$BoltFFIStatus>) _f$processBytes;

  _I$ICallbackProxy(_$$BoltCallbackHandle handle):
    _handle = handle {
    final _l$vtable = handle.vtable.cast<_I$ICallbackVTable>().ref;
    _f$mapU32 = _l$vtable.mapU32.asFunction();
    _f$mapStringRef = _l$vtable.mapStringRef.asFunction();
    _f$mapString = _l$vtable.mapString.asFunction();
    _f$processBytes = _l$vtable.processBytes.asFunction();
    _finalizer.attach(this, this._handle, detach: this);
  }

  @override
  int mapU32(int n) {
    final _l$outStatus = _$$BoltCallocPtr<$$ffi.Int32>.alloc($$ffi.sizeOf<$$ffi.Int32>());
    final _l$outPtr = _$$BoltCallocPtr<$$ffi.Uint32>.alloc($$ffi.sizeOf<$$ffi.Uint32>());
    _f$mapU32(_handle.handle, n, _l$outPtr.ptr, _l$outStatus.ptr.cast());
    if (_l$outStatus.ptr.value != 0) {
      throw $$BoltException("ICallback.mapU32(...) foreign callback panicked");
    }
    return _l$outPtr.ptr.value;
  }
  @override
  String mapStringRef(String s) {
    final l$sStorage = _$$BoltStoragePool.acquireStorage((4 + (s.length * 3)));
    final l$sWire = _$$BoltWireEncoder(_$$BoltBufWriter.fromSpan(l$sStorage.ptr, l$sStorage.len));
    l$sWire.writeString(s);
    final _l$outStatus = _$$BoltCallocPtr<$$ffi.Int32>.alloc($$ffi.sizeOf<$$ffi.Int32>());
    final _l$outPtr = _$$BoltCallocPtr<$$ffi.Pointer<$$ffi.Uint8>>.alloc($$ffi.sizeOf<$$ffi.Pointer<$$ffi.Uint8>>());
    final _l$outLen = _$$BoltCallocPtr<$$ffi.UintPtr>.alloc($$ffi.sizeOf<$$ffi.UintPtr>());
    _f$mapStringRef(_handle.handle, l$sStorage.ptr, l$sWire.len, _l$outPtr.ptr, _l$outLen.ptr, _l$outStatus.ptr.cast());
    _$$BoltStoragePool.releaseStorage(l$sStorage);
    if (_l$outStatus.ptr.value != 0) {
      throw $$BoltException("ICallback.mapStringRef(...) foreign callback panicked");
    }
    final _l$resWire = _$$BoltWireDecoder(_$$BoltBufReader.fromSpan(_l$outPtr.ptr.value, _l$outLen.ptr.value));
    return _l$resWire.readString();
  }
  @override
  String mapString(String s) {
    final l$sStorage = _$$BoltStoragePool.acquireStorage((4 + (s.length * 3)));
    final l$sWire = _$$BoltWireEncoder(_$$BoltBufWriter.fromSpan(l$sStorage.ptr, l$sStorage.len));
    l$sWire.writeString(s);
    final _l$outStatus = _$$BoltCallocPtr<$$ffi.Int32>.alloc($$ffi.sizeOf<$$ffi.Int32>());
    final _l$outPtr = _$$BoltCallocPtr<$$ffi.Pointer<$$ffi.Uint8>>.alloc($$ffi.sizeOf<$$ffi.Pointer<$$ffi.Uint8>>());
    final _l$outLen = _$$BoltCallocPtr<$$ffi.UintPtr>.alloc($$ffi.sizeOf<$$ffi.UintPtr>());
    _f$mapString(_handle.handle, l$sStorage.ptr, l$sWire.len, _l$outPtr.ptr, _l$outLen.ptr, _l$outStatus.ptr.cast());
    _$$BoltStoragePool.releaseStorage(l$sStorage);
    if (_l$outStatus.ptr.value != 0) {
      throw $$BoltException("ICallback.mapString(...) foreign callback panicked");
    }
    final _l$resWire = _$$BoltWireDecoder(_$$BoltBufReader.fromSpan(_l$outPtr.ptr.value, _l$outLen.ptr.value));
    return _l$resWire.readString();
  }
  @override
  void processBytes($$typed_data.Uint8List bytes) {
    final l$bytesStorage = _$$BoltStoragePool.acquireStorage((4 + bytes.length));
    final l$bytesWire = _$$BoltWireEncoder(_$$BoltBufWriter.fromSpan(l$bytesStorage.ptr, l$bytesStorage.len));
    l$bytesWire.writeBytes(bytes);
    final _l$outStatus = _$$BoltCallocPtr<$$ffi.Int32>.alloc($$ffi.sizeOf<$$ffi.Int32>());
_f$processBytes(_handle.handle, l$bytesStorage.ptr, l$bytesWire.len, _l$outStatus.ptr.cast());
    _$$BoltStoragePool.releaseStorage(l$bytesStorage);
    if (_l$outStatus.ptr.value != 0) {
      throw $$BoltException("ICallback.processBytes(...) foreign callback panicked");
    }
  }
}

final class _I$ICallback {
  static final _$$BoltFFIHandleMap<ICallback> _k$map = _$$BoltFFIHandleMap();

  static final _$$BoltCallocPtr<_I$ICallbackVTable> _k$vtable = (() {
    final vtable = _$$BoltCallocPtr<_I$ICallbackVTable>.alloc(
      $$ffi.sizeOf<_I$ICallbackVTable>(),
    );

    vtable.ptr.ref
      ..free = $$ffi.Pointer.fromFunction(_I$ICallback.free)
      ..clone = $$ffi.Pointer.fromFunction(_I$ICallback.clone, 0)
      ..mapU32 = $$ffi.Pointer.fromFunction(_I$ICallback.mapU32)
      ..mapStringRef = $$ffi.Pointer.fromFunction(_I$ICallback.mapStringRef)
      ..mapString = $$ffi.Pointer.fromFunction(_I$ICallback.mapString)
      ..processBytes = $$ffi.Pointer.fromFunction(_I$ICallback.processBytes);

    return vtable;
  })();

  static _$$BoltCallbackHandle createCallbackHandle(ICallback value) {
    return $$ffi.Struct.create()
      ..handle = _k$map.insert(value)
      ..vtable = _k$vtable.ptr.cast<$$ffi.Void>();
  }

  static void free(int handle) => _k$map.remove(handle);

  static int clone(int handle) => _k$map.clone(handle);

  static ICallback wrap(_$$BoltCallbackHandle handle) => _k$map.get(handle.handle) ?? _I$ICallbackProxy(handle);

  static void mapU32(int _p$handle, int n, $$ffi.Pointer<$$ffi.Uint32> _p$outPtr, $$ffi.Pointer<_$$BoltFFIStatus> _p$outStatus) {
    final _l$impl = _k$map.get(_p$handle);
    if (_l$impl == null) {
      throw $$BoltException("ICallback: invalid handle `${_p$handle}`");
    }
    final l$n = n;
    _p$outPtr.value = _l$impl.mapU32(l$n);
    _p$outStatus.ref.code = 0;
  }

  static void mapStringRef(int _p$handle, $$ffi.Pointer<$$ffi.Uint8> sPtr, int sLen, $$ffi.Pointer<$$ffi.Pointer<$$ffi.Uint8>> _p$outPtr, $$ffi.Pointer<$$ffi.UintPtr> _p$outLen, $$ffi.Pointer<_$$BoltFFIStatus> _p$outStatus) {
    final _l$impl = _k$map.get(_p$handle);
    if (_l$impl == null) {
      throw $$BoltException("ICallback: invalid handle `${_p$handle}`");
    }
    final l$sWire = _$$BoltWireDecoder(_$$BoltBufReader.fromSpan(sPtr, sLen));
    final l$s = l$sWire.readString();
    final _l$res = _l$impl.mapStringRef(l$s);
    final _l$resStorage = _$$BoltCallocPtr<$$ffi.Uint8>.allocUnmanaged((4 + (_l$res.length * 3)));
    final _l$resWire = _$$BoltWireEncoder(_$$BoltBufWriter.fromSpan(_l$resStorage.ptr, _l$resStorage.len));
    _l$resWire.writeString(_l$res);
    _p$outPtr.value = _l$resStorage.ptr;
    _p$outLen.value = _l$resWire.len;
    _p$outStatus.ref.code = 0;
  }

  static void mapString(int _p$handle, $$ffi.Pointer<$$ffi.Uint8> sPtr, int sLen, $$ffi.Pointer<$$ffi.Pointer<$$ffi.Uint8>> _p$outPtr, $$ffi.Pointer<$$ffi.UintPtr> _p$outLen, $$ffi.Pointer<_$$BoltFFIStatus> _p$outStatus) {
    final _l$impl = _k$map.get(_p$handle);
    if (_l$impl == null) {
      throw $$BoltException("ICallback: invalid handle `${_p$handle}`");
    }
    final l$sWire = _$$BoltWireDecoder(_$$BoltBufReader.fromSpan(sPtr, sLen));
    final l$s = l$sWire.readString();
    final _l$res = _l$impl.mapString(l$s);
    final _l$resStorage = _$$BoltCallocPtr<$$ffi.Uint8>.allocUnmanaged((4 + (_l$res.length * 3)));
    final _l$resWire = _$$BoltWireEncoder(_$$BoltBufWriter.fromSpan(_l$resStorage.ptr, _l$resStorage.len));
    _l$resWire.writeString(_l$res);
    _p$outPtr.value = _l$resStorage.ptr;
    _p$outLen.value = _l$resWire.len;
    _p$outStatus.ref.code = 0;
  }

  static void processBytes(int _p$handle, $$ffi.Pointer<$$ffi.Uint8> bytesPtr, int bytesLen, $$ffi.Pointer<_$$BoltFFIStatus> _p$outStatus) {
    final _l$impl = _k$map.get(_p$handle);
    if (_l$impl == null) {
      throw $$BoltException("ICallback: invalid handle `${_p$handle}`");
    }
    final l$bytesWire = _$$BoltWireDecoder(_$$BoltBufReader.fromSpan(bytesPtr, bytesLen));
    final l$bytes = l$bytesWire.readUint8List();
    _l$impl.processBytes(l$bytes);
    _p$outStatus.ref.code = 0;
  }
}
